--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,5 +26,6 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "partials/archive";
 @import "partials/content";
 @import "partials/header";
+@import "partials/media";
 @import "partials/menu";
 @import "partials/wp-classes";
