Temp textarea fix

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,3 +29,8 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "partials/media";
 @import "partials/menu";
 @import "partials/wp-classes";
+
+/* temp */
+textarea {
+	max-width: 100%;
+}
