Implement navigation elements

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 @import "partials/header";
 @import "partials/media";
 @import "partials/menu";
+@import "partials/nav";
 @import "partials/wp-classes";
 
 /* temp */
