Set up footer widget areas

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,10 +25,12 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 
 @import "partials/archive";
 @import "partials/content";
+@import "partials/footer";
 @import "partials/header";
 @import "partials/media";
 @import "partials/menu";
 @import "partials/nav";
+@import "partials/sidebar";
 @import "partials/wp-classes";
 
 /* temp */
