Trying out a different body font

--- a/inc/css/bootstrap.css
+++ b/inc/css/bootstrap.css
@@ -19,7 +19,7 @@ html { font-family: sans-serif; line-height: 1.15; -webkit-text-size-adjust: 100
 @-ms-viewport { width: device-width; }
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section { display: block; }
 
-body { margin: 0; font-family: "Catamaran", "Helvetica Neue", sans-serif; font-size: 1rem; font-weight: 400; line-height: 1.5; color: #151515; text-align: left; background-color: #f9f9f9; }
+body { margin: 0; font-family: "Alegreya Sans", "Helvetica Neue", sans-serif; font-size: 1rem; font-weight: 400; line-height: 1.5; color: #151515; text-align: left; background-color: #f9f9f9; }
 
 [tabindex="-1"]:focus { outline: none !important; }
 
