--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,5 @@
 $serif: "Crimson Text", "Georgia", serif;
-$sans: "Catamaran", "Helvetica Neue", sans-serif;
+$sans: "Alegreya Sans", "Helvetica Neue", sans-serif;
 $monospace: "Inconsolata", "Courier New", monospace;
 
 $white:  #f9f9f9;
