Navigation buttons should be fixed on mobile

--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -22,31 +22,38 @@
 			box-shadow: none;
 		}
 	}
+}
+
+.nav-previous {
+	flex-basis: 100%;
+	text-align: center;
 	
-	.nav-previous {
-		flex-basis: 100%;
-		margin-bottom: map-get( $spacers, 3 );
-		text-align: center;
-		
-		@include media-breakpoint-up( md ) {
-			flex-basis: auto;
-			margin-bottom: 0;
-			max-width: 50%;
-		}
-	}
-	
-	.nav-next {
-		flex-basis: 100%;
-		text-align: center;
-		
-		@include media-breakpoint-up( md ) {
-			flex-basis: auto;
-			margin-left: auto;
-			max-width: 50%;
-		}
+	@include media-breakpoint-up( md ) {
+		flex-basis: auto;
+		margin-bottom: 0;
+		max-width: 50%;
 	}
 }
 
+.nav-next {
+	flex-basis: 100%;
+	text-align: center;
+	
+	.nav-previous + & {
+		margin-top: map-get( $spacers, 3 );
+		
+		@include media-breakpoint-up( md ) {
+			margin-top: 0;
+		}
+	}
+	
+	@include media-breakpoint-up( md ) {
+		flex-basis: auto;
+		margin-left: auto;
+		max-width: 50%;
+	}
+}
+	
 .nav-title {
 	display: block;
 	font-weight: bold;
